force-app/main/default/objects/Delivery__c/fields/Course_delivered_Number__c.field-meta.xml
<CustomField>
    <fullName>Course_delivered_Number__c</fullName>
    <displayFormat>DELIVERY-{0000}</displayFormat>
    <label>Course delivered Number</label>
    <type>AutoNumber</type>
</CustomField>