force-app/main/default/objects/Delivery__c/fields/Instructor__c.field-meta.xml
<CustomField>
    <fullName>Instructor__c</fullName>
    <label>Instructor</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>