force-app/main/default/objects/Delivery__c/fields/status__c.field-meta.xml
<CustomField>
    <fullName>status__c</fullName>
    <label>status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not delivered</fullName>
                <default>true</default>
                <label>Not delivered</label>
            </value>
            <value>
                <fullName>delivered</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>